[package]
name = "wh"
version = "0.1.0"
authors = ["ryoo14 <anana12185@gmail.com>"]
edition = "2018"
description = "Manage working directories"
license = "MIT"
repository = "https://github.com/ryoo14/wh"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
clap = "=3.0.0-beta.2"

[lib]
name = "wh"
path = "src/lib.rs"

[[bin]]
name = "wh"
path = "src/main.rs"
