[package]
name = "wh"
version = "0.9.0"
authors = ["ryoo14 <anana12185@gmail.com>"]
edition = "2021"
description = "Manage working directories"
license = "MIT"
repository = "https://github.com/ryoo14/wh"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
clap = { version = "^3.1", features = ["derive"] }
git2 = "^0.13"
walkdir = "^2.3"

[lib]
name = "wh"
path = "src/lib.rs"

[[bin]]
name = "wh"
path = "src/main.rs"
